[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/PartyMemberPreview.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Container" type="Container"]
margin_right = 306.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 75 )
rect_scale = Vector2( 1.00033, 1 )
rect_pivot_offset = Vector2( 32, 32 )
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="PartyMember" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="Tile" type="Polygon2D" parent="PartyMember"]
position = Vector2( 166.211, 34.7107 )
scale = Vector2( 2.30431, 1.07895 )
color = Color( 0.631373, 0.603922, 0.533333, 1 )
antialiased = true
polygon = PoolVector2Array( -65.0617, -27.5806, 59.8161, -31.9002, 53.4755, 28.0918, -71.9639, 43.5564 )
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="PartyMember"]
margin_left = 5.0
margin_top = 5.0
margin_right = 297.0
margin_bottom = 69.0
size_flags_vertical = 0

[node name="Portrait" type="TextureRect" parent="PartyMember/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 0
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="PartyMember/HBoxContainer"]
margin_left = 68.0
margin_right = 188.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="PartyMember/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0862745, 0.0784314, 0.0784314, 1 )
text = "character name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PartyMember/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 18.0

[node name="RankStar" type="TextureRect" parent="PartyMember/HBoxContainer/VBoxContainer/HBoxContainer"]

[node name="GridContainer" type="GridContainer" parent="PartyMember/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_right = 4.0
columns = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PartyMember/HBoxContainer"]
margin_left = 192.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 56.0
size_flags_vertical = 4
alignment = 2

[node name="Resource2" type="ColorRect" parent="PartyMember/HBoxContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_vertical = 0
color = Color( 0.87451, 0.6, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource1" type="ColorRect" parent="PartyMember/HBoxContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_vertical = 0
color = Color( 0.87451, 0.6, 0.6, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
